--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org
 
+      - run: npm install
       - run: npm ci
       - run: npm test
       - run: npm run build
